fixed jumping label

--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -134,6 +134,10 @@ html .dropdown {
   &__value-container {
     padding: 0;
     overflow: hidden;
+
+    input {
+      line-height: 1;
+    }
   }
 
   &__multi-value {
